--- a/app/styles/pages/recent.module.scss
+++ b/app/styles/pages/recent.module.scss
@@ -15,25 +15,26 @@
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-gap: 1em;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1100px;
   margin: 0 auto;
   margin-bottom: 5em;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  transition: all 0.5s ease-in-out;
+  
 }
 
 .imgContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 1100px;
-  min-width: none;
-  background-clip: content-box;
-  border-radius: 0.2em;
+  
   overflow: hidden;
   margin: 0 auto;
-  transition: all 0.5s ease-in-out;
   margin-top: 0.7em;
   
 
@@ -41,18 +42,16 @@
     list-style: none;
     margin: 0 auto;
     padding: 0;
-    
   }
   
   ul{
     margin: 0 auto;
     padding: 0;
+    border-radius: 0.2em;
   }
-  // :hover {
-  //   transform: scale(0.99);
-  //   transition: all 0.2s ease-in-out;
-  // }
+ 
 }
+
 
 .title{
   font-size: clamp(1.5rem, 5vw, 1.8rem);
@@ -122,12 +121,24 @@
     max-width: 1100px;
    
   }
+  .container{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1100px;
+    margin-bottom: 5em;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+  
+  }
+
   .imgContainer {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
     overflow: hidden;
-    margin-bottom: 0.7em;
   }
 }
 .title{
