--- a/app/styles/pages/slug.module.scss
+++ b/app/styles/pages/slug.module.scss
@@ -12,53 +12,48 @@
   line-height: 1.5;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  background-color: none;
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-gap: 1em;
+  flex-wrap: wrap;
   margin: 0 auto;
-  margin-bottom: 5em;
-}
-
-.titleContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   max-width: 1100px;
-  min-width: none;
-  background-clip: content-box;
-  border-radius: 0.2em;// 
-  overflow: hidden;
   margin: 0 auto;
+  margin-bottom: 5em;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
   transition: all 0.5s ease-in-out;
   
+}
+
+.imgContainer {
+  margin: 0 auto;
+  margin-top: 0.7em;
   
 
   li{
     list-style: none;
     margin: 0 auto;
     padding: 0;
-    
   }
   
   ul{
     margin: 0 auto;
     padding: 0;
+    border-radius: 0.2em;
   }
-  // :hover {
-  //   transform: scale(0.99);
-  //   transition: all 0.2s ease-in-out;
-  // }
 }
+
 
 .title{
   font-size: clamp(1.5rem, 5vw, 1.8rem);
   font-weight: 300;
-  margin-bottom: 1.5em;
+  margin-bottom: 0.5em;
   margin-top: 0.5em;
   text-align: center;
   font-family: $primary-font;
@@ -72,64 +67,9 @@
   border-radius: 0.2em;
   box-sizing: border-box; 
   letter-spacing: 0.2em;
-  border: 1px solid $thirteenth-color;  
-}
-
-.imgContainer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 1100px;
-  min-width: none;
-  background-clip: content-box;
-  border-radius: 0.2em;// 
-  overflow: hidden;
-  margin: 0 auto;
-  transition: all 0.5s ease-in-out;
-  margin-top: 0.7em;
-
-  a{
-    text-decoration: none;
-  }
+  border: 1px solid $thirteenth-color;
   
-
-  li{
-    list-style: none;
-    margin: 0 auto;
-    padding: 0;
-    text-decoration: none;
-    
-  }
-  
-  ul{
-    margin: 0 auto;
-    padding: 0;
-  }
-  h1{
-    font-size: clamp(1.5rem, 5vw, 1.8rem);
-    font-weight: 300;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    text-align: center;
-    font-family: $primary-font;
-    top: 0;
-    color: $thirteenth-color;
-    background-color: $primary-color;
-    width: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 1.2em;
-    border-radius: 0.2em;
-    box-sizing: border-box; 
-    letter-spacing: 0.2em;
-  }
-  h1:hover{
-    color: $secondary-color;
-    transition: all 0.5s ease-in-out;
-  }
 }
-
 
 .object-contain {
   object-fit: contain;
@@ -178,15 +118,28 @@
     max-width: 1100px;
    
   }
+  .container{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1100px;
+    margin-bottom: 5em;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+  
+  }
+
   .imgContainer {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
     overflow: hidden;
-    margin-top: 0.7em;
   }
 }
 .title{
+  
   font-weight: 300;
   margin-bottom: 0.5em;
   margin-top: 0.5em;
